# Remote-Terminal-for-MeshCore

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSES.md  README.md  docker-compose.yaml  pyproject.toml
app/: AGENTS.md  AGENTS_MQTT.md  bot.py  community_mqtt.py  config.py  database.py  decoder.py  event_handlers.py  frontend_static.py  keystore.py  main.py  migrations.py  models.py  mqtt.py  mqtt_base.py  packet_processor.py  radio.py  radio_sync.py  repository.py  websocket.py
app/fanout/: AGENTS_fanout.md  __init__.py  apprise_mod.py  base.py  bot.py  bot_exec.py  community_mqtt.py  manager.py  mqtt.py  mqtt_base.py  mqtt_community.py  mqtt_private.py  webhook.py
app/repository/: __init__.py  channels.py  contacts.py  fanout.py  messages.py  raw_packets.py  settings.py
app/routers/: channels.py  contacts.py  fanout.py  health.py  messages.py  packets.py  radio.py  read_state.py  repeaters.py  settings.py  statistics.py  ws.py
frontend/: AGENTS.md  index.html  package-lock.docker.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  messageCache.ts  prefetch.ts  styles.css  themes.css  types.ts  useWebSocket.ts
frontend/src/components/: AGENTS.md  AGENTS_packet_visualizer.md  BotCodeEditor.tsx  ChannelInfoPane.tsx  ChatHeader.tsx  ContactAvatar.tsx  ContactInfoPane.tsx  ContactStatusInfo.tsx  CrackerPanel.tsx  MapView.tsx  MessageInput.tsx  MessageList.tsx  NeighborsMiniMap.tsx  NewMessageModal.tsx  PacketVisualizer3D.tsx  PathModal.tsx  PathRouteMap.tsx  RawPacketList.tsx  RepeaterDashboard.tsx  RepeaterLogin.tsx  SearchView.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  VisualizerView.tsx  settingsConstants.ts
frontend/src/hooks/: index.ts  useAirtimeTracking.ts  useAppSettings.ts  useContactsAndChannels.ts  useConversationMessages.ts  useConversationRouter.ts  useRadioControl.ts  useRepeaterDashboard.ts  useRepeaterMode.ts  useUnreadCounts.ts
frontend/src/test/: api.test.ts  appFavorites.test.tsx  appSearchJump.test.tsx  appStartupHash.test.tsx  channelInfoKeyVisibility.test.tsx  chatHeaderKeyVisibility.test.tsx  contactAvatar.test.ts  fanoutSection.test.tsx  integration.test.ts  localLabel.test.ts  messageCache.test.ts  messageInput.test.tsx  messageParser.test.ts  newMessageModal.test.tsx  pathUtils.test.ts  prefetch.test.ts  radioPresets.test.ts  rawPacketIdentity.test.ts  repeaterDashboard.test.tsx  repeaterFormatters.test.ts  (+14 more)
scripts/: all_quality.sh  collect_licenses.sh  deploy.sh  e2e.sh  print_frontend_licenses.cjs  publish.sh
tests/: conftest.py  test_ack_tracking_wiring.py  test_api.py  test_block_lists.py  test_bot.py  test_channel_sender_backfill.py  test_channels_router.py  test_community_mqtt.py  test_contacts_router.py  test_decoder.py  test_disable_bots.py  test_echo_dedup.py  test_event_handlers.py  test_fanout.py  test_fanout_hitlist.py  test_fanout_integration.py  test_frontend_static.py  test_health_mqtt_status.py  test_key_normalization.py  test_keystore.py  test_message_pagination.py  test_message_prefix_claim.py  test_messages_search.py  test_migrations.py  test_mqtt.py  test_packet_pipeline.py  test_packets_router.py  test_radio.py  test_radio_operation.py  test_radio_router.py  test_radio_sync.py  test_real_crypto.py  test_repeater_routes.py  test_repository.py  test_rx_log_data.py  test_send_messages.py  test_settings_router.py  test_statistics.py  test_websocket.py  test_websocket_route.py
tests/e2e/: playwright.config.ts
(+71 files in other folders)
